--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@ unsplash-logo
 <div id="get-the-pipeline-files-onto-your-computer" class="section level3">
 <h3>Get the pipeline files onto your computer</h3>
 <ol style="list-style-type: decimal">
-<li><p>Open a new project in Rstudio (if this is new for you see [New to Rstudio])</p></li>
+<li><p>Open a new project in Rstudio (if this is new for you see <a href="#new-to-rstudio"><strong>New to RStudio</strong></a>)</p></li>
 <li><p>Select the Terminal tab</p></li>
 </ol>
 <hr />
